@@ -1,0 +1,1 @@
+aoplot <- function(x, ...) UseMethod("aoplot")
