@@ -1,8 +1,13 @@
 MEFA VERSIONS
 
 Version 3.1-6 -- August 23, 2010
+    * image plot for 'dist' objects
+      (still needs tweaking: labels, similarity check)
+    * aoplot method added for abundance-occupancy
+      plots as in Digby and Kempton 1987 p. 40.
     * New extractor methods added for mefa objects:
       xtab, samp, taxa, segm
+
 
 Version 3.1-5 -- June 4, 2010
 
